# MyGrep

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: .main.cpp.swo  MyGrep.hpp  main.cpp  test.cpp
